--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# editor environment
-
-/.idea
-/*.iml
-
-# build-related
-.current_release
-.dict_page
-Godeps/
+_site
+.sass-cache
+.jekyll-metadata
+vendor
+.idea
