Revert "gh-pages"
This reverts commit 6b3de7cf736ec4758c71c4bc4c1fa1a29aaa948c.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-_site
-.sass-cache
-.jekyll-metadata
-vendor
-.idea
+# editor environment
+
+/.idea
+/*.iml
+
+# build-related
+.current_release
+.dict_page
+Godeps/
